5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions (1)/1674_1879.log
== TEST (2019-04-30 11:28:24) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500, 2))
else:
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:34) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500, 2))
else:
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:28:45) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500, 2))
else:
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100, 2))
-- EXECUTION TIME:
0.127376
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 faltas
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 faltas
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 faltas
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:29:42) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500, 2))
elif(H > 0 and H <=400)
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100, 2))
-- ERROR:
File "XXXX", line 9
    elif(H > 0 and H <=400)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:29:46) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500, 2))
elif(H > 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:10) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.0, 2))
elif(H > 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.0, 2))
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:30:18) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.0, 2))
elif(H > 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.0, 2))
-- EXECUTION TIME:
0.192889
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 faltas
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 faltas
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 faltas
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:31:46) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.00, 2))
elif(H > 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.00, 2))
-- OUTPUT:
420.0 extras e 20.0 faltas
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:32:12) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.00, 2))
elif(H > 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.00, 2))
-- EXECUTION TIME:
0.15439
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 faltas
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 faltas
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 faltas
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:32:25) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.00, 2))
elif(H >= 0 and H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.00, 2))
-- EXECUTION TIME:
0.133206
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 faltas
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 faltas
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 faltas
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:32:31) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(500.00, 2))
elif(H <=400):
	print(ext,"extras e",fal,"faltas")
	print("R$",round(100.00, 2))
-- EXECUTION TIME:
0.193635
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 faltas
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 faltas
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 faltas
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:33:11) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"falta")
	print("R$",round(500.00, 2))
elif(H <=400):
	print(ext,"extras e",fal,"falta")
	print("R$",round(100.00, 2))
-- EXECUTION TIME:
0.144156
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:33:28) 
-- CODE:
ext = float(input("Horas extras: "))
fal = float(input("Horas que faltou: "))

H = ext - (1/4)*fal

if(H > 400):
	print(ext,"extras e",fal,"de falta")
	print("R$",round(500.00, 2))
elif(H <=400):
	print(ext,"extras e",fal,"de falta")
	print("R$",round(100.00, 2))
-- EXECUTION TIME:
0.18793
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
